[project]
name = "gta_tool"
version = "0.1.0"
description = "gta online script"
requires-python = ">=3.10"
dependencies = [
    "psutil>=7.2.1",
    "tomli>=2.3.0",
    "numpy>=2.2.6",
    "pywin32>=311",
    "opencv-python>=4.12.0.88",
    "mss>=10.1.0",
    "pydirectinput>=1.0.4",
    "pydantic>=2.12.5",
]
